<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">kJams Remote</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="welcome">Welcome to kJams Remote! This is a very initial alpha version. You should input your kJams server DNS name or IP address, with "http://address/". If you already have a user on the server, put that in as well, with your password. Otherwise, we will create a new singer with the password you supply.</string>
    <string name="server_hint">kJams Server</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="button_connect">Connect</string>
    <string name="button_exit">Exit</string>

</resources>